Add drive section for designs, photos, and videos
Added a new drive section with a link to Google Drive.

--- a/projects.html
+++ b/projects.html
@@ -72,6 +72,35 @@
       background: #ff6b6b;
     }
 
+    /* --- Drive Section --- */
+    .drive-section {
+      background: #ffffff;
+      color: #ff9f9f;
+      padding: 40px;
+      border-radius: 18px;
+      text-align: center;
+      margin: 50px auto 30px;
+      width: 90%;
+      max-width: 600px;
+      box-shadow: 0 0 30px rgba(255, 159, 159, 0.2);
+    }
+
+    .drive-section a {
+      color: #ffffff;
+      background: #ff9f9f;
+      padding: 12px 25px;
+      border-radius: 10px;
+      display: inline-block;
+      font-weight: bold;
+      transition: all 0.3s ease;
+      text-decoration: none;
+    }
+
+    .drive-section a:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
+    }
+
     @media (max-width: 600px) {
       .container { grid-template-columns: 1fr; padding: 10px; }
     }
@@ -91,6 +120,13 @@
   <div class="project"><h3>Website 7</h3><a href="https://sacollectables.co.za/" target="_blank">Visit site</a></div>
   <div class="project"><h3>Website 8</h3><a href="https://vumaexpots.com/" target="_blank">Visit site</a></div>
   <div class="project"><h3>Website 9</h3><a href="https://nexifyenterprise.com/" target="_blank">Visit site</a></div>
+</div>
+
+<!-- Designs Section -->
+<div class="drive-section">
+  <h2>Designs, Photos & Videos</h2>
+  <p>Explore my creative collection:</p>
+  <a href="https://drive.google.com/drive/folders/1JeHOoXHlQUOfeBhwnxhSdlw8_lnjy0kl" target="_blank">Open Google Drive</a>
 </div>
 
 <a href="index.html" class="back-button">Back to Home</a>
