Update header color and add footer section
Changed header background color and added footer with copyright and social links.

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     }
 
     header {
-      background-color: #ff9f9f;
+      background-color: #333;
       color: white;
       padding: 20px 0;
       text-align: center;
@@ -54,6 +54,11 @@
     <a href="index.html">Back to Home</a>
   </div>
 </div>
+
+<footer>
+  <p>&copy; 2025 Abdullah. All rights reserved.</p>
+  <p>Follow me on <a href="https://twitter.com" target="_blank">Twitter</a> | <a href="https://linkedin.com" target="_blank">LinkedIn</a></p>
+</footer>
 
 </body>
 </html>
