Refactor header to navigation section

--- a/index.html
+++ b/index.html
@@ -27,61 +27,26 @@
       z-index: -1;
     }
 
-    /* Header */
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 20px;
-      position: sticky;
-      top: 0;
+    /* Navigation */
+    nav {
+      position: absolute;
+      top: 20px;
+      right: 20px;
       z-index: 100;
     }
 
-    header nav {
-      text-align: center;
-    }
-
-    header nav a {
+    nav a {
       color: #fff;
       padding: 10px 20px;
       text-decoration: none;
       font-weight: bold;
       transition: all 0.3s ease;
+      margin: 0 10px;
     }
 
-    header nav a:hover {
+    nav a:hover {
       background-color: #ff9f9f;
       border-radius: 5px;
-    }
-
-    header h1 {
-      text-align: center;
-      margin: 0;
-      font-size: 2.5em;
-      color: #ff9f9f;
-      text-shadow: 0 0 5px #ff9f9f, 0 0 15px #ff9f9f;
-      animation: flicker 1.5s infinite alternate;
-    }
-
-    /* Flicker effect animation */
-    @keyframes flicker {
-      0% { opacity: 1; }
-      10% { opacity: 0.5; }
-      20% { opacity: 1; }
-      30% { opacity: 0.7; }
-      40% { opacity: 1; }
-      50% { opacity: 0.3; }
-      60% { opacity: 1; }
-      70% { opacity: 0.8; }
-      80% { opacity: 1; }
-      90% { opacity: 0.6; }
-      100% { opacity: 1; }
-    }
-
-    header p {
-      margin-top: 10px;
-      font-size: 1.2em;
-      color: #ccc;
     }
 
     /* Button container */
@@ -178,8 +143,6 @@
         flex-direction: column;
         align-items: center;
       }
-
-      header h1 { font-size: 2.3em; }
     }
   </style>
 </head>
@@ -190,20 +153,12 @@
   Your browser does not support the video tag.
 </video>
 
-<!-- Header -->
-<header>
-  <h1>DigitalVerse</h1>
-  <p><b>Portfolio by Abdullah</b></p>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-  <div class="button-container">
-    <a href="projects.html">See My Projects</a>
-  </div>
-</header>
+<!-- Navigation -->
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
 
 <!-- Flex Container for Drive Section -->
 <div class="container">
