--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
       z-index: 1;
     }
 
-    /* Flickering effect for the heading */
     header h1 {
       margin: 0;
       font-size: 3.5em;
@@ -42,7 +41,6 @@
       animation: flicker 1.5s infinite alternate;
     }
 
-    /* Flicker effect animation */
     @keyframes flicker {
       0% { opacity: 1; }
       10% { opacity: 0.5; }
@@ -61,6 +59,27 @@
       margin-top: 10px;
       font-size: 1.2em;
       color: #666;
+    }
+
+    /* Navigation Styles */
+    nav {
+      background: #333;
+      padding: 15px;
+      text-align: center;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      padding: 10px 20px;
+      margin: 0 15px;
+      font-weight: bold;
+      transition: all 0.3s ease;
+    }
+
+    nav a:hover {
+      background-color: #ff9f9f;
+      border-radius: 5px;
     }
 
     .button-container {
@@ -139,6 +158,18 @@
 
       header h1 { font-size: 2.3em; }
     }
+
+    /* Footer Styles */
+    footer {
+      background: #333;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      position: relative;
+      bottom: 0;
+      width: 100%;
+    }
+
   </style>
 </head>
 <body>
@@ -155,6 +186,13 @@
     <a href="projects.html">See My Projects</a>
   </div>
 </header>
+
+<!-- Navigation Bar -->
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About Me</a>
+  <a href="contact.html">Contact</a>
+</nav>
 
 <!-- Flex Container for Drive Section -->
 <div class="container">
@@ -179,6 +217,11 @@
     <a href="contact.html">Contact Me</a>
   </div>
 </div>
+
+<!-- Footer -->
+<footer>
+  <p>&copy; 2025 Abdullah. All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
