--- a/index.html
+++ b/index.html
@@ -26,35 +26,12 @@
       z-index: -1; /* Ensure video is behind everything */
     }
 
-    /* --- Navigation Styles --- */
-    nav {
-      background: rgba(51, 51, 51, 0.7); /* Semi-transparent background */
-      padding: 15px;
-      text-align: center;
-      position: relative;
-      z-index: 1; /* Ensure nav is above video background */
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      padding: 10px 20px;
-      margin: 0 15px;
-      font-weight: bold;
-      transition: all 0.3s ease;
-    }
-
-    nav a:hover {
-      background-color: #ff9f9f;
-      border-radius: 5px;
-    }
-
     /* --- Header Styles --- */
     header {
       text-align: center;
       padding: 100px 20px 40px;
       position: relative;
-      z-index: 2; /* Ensure header content is above nav and video */
+      z-index: 2; /* Ensure header content is above video and other elements */
     }
 
     header h1 {
@@ -105,55 +82,25 @@
       box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
     }
 
-    /* --- Card Styling --- */
-    .container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 20px;
-      margin: 50px auto;
+    /* Small links section */
+    .social-links {
+      margin-top: 20px;
+      font-size: 1.1em;
     }
 
-    .card {
-      width: 300px;
-      height: 400px;
-      background-color: #fff;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-      border-radius: 15px;
-      overflow: hidden;
-      position: relative;
-      background-size: cover;
-      background-position: center;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      text-align: center;
-    }
-
-    .card a {
-      color: #fff;
-      background: #ff9f9f;
-      padding: 12px 25px;
-      border-radius: 10px;
-      display: inline-block;
-      font-weight: bold;
+    .social-links a {
+      color: #ff9f9f;
       text-decoration: none;
-      margin-bottom: 20px;
+      margin: 0 15px;
+      transition: color 0.3s ease;
     }
 
-    .card a:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
+    .social-links a:hover {
+      color: #ff6b6b;
     }
 
     /* Media query for responsiveness */
     @media (max-width: 768px) {
-      .container {
-        flex-direction: column;
-        align-items: center;
-      }
-
       header h1 { font-size: 2.3em; }
     }
 
@@ -180,13 +127,14 @@
 <header>
   <h1>DigitalVerse</h1>
   <p><b>Portfolio by Abdullah</b></p>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About Me</a>
-    <a href="contact.html">Contact</a>
-  </nav>
   <div class="button-container">
     <a href="projects.html">See My Projects</a>
+  </div>
+
+  <!-- Social Links Section -->
+  <div class="social-links">
+    <a href="https://www.instagram.com/yourusername" target="_blank">Instagram</a>
+    <a href="https://www.linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
   </div>
 </header>
 
