--- a/index.html
+++ b/index.html
@@ -82,26 +82,46 @@
       box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
     }
 
-    /* Small links section */
-    .social-links {
-      margin-top: 20px;
-      font-size: 1.1em;
+    /* Card Styles */
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      margin: 50px auto;
     }
 
-    .social-links a {
-      color: #ff9f9f;
+    .card {
+      width: 300px;
+      height: 400px;
+      background-color: #fff;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+      border-radius: 15px;
+      overflow: hidden;
+      position: relative;
+      background-size: cover;
+      background-position: center;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      text-align: center;
+    }
+
+    .card a {
+      color: #fff;
+      background: #ff9f9f;
+      padding: 12px 25px;
+      border-radius: 10px;
+      display: inline-block;
+      font-weight: bold;
       text-decoration: none;
-      margin: 0 15px;
-      transition: color 0.3s ease;
+      margin-bottom: 20px;
     }
 
-    .social-links a:hover {
-      color: #ff6b6b;
-    }
-
-    /* Media query for responsiveness */
-    @media (max-width: 768px) {
-      header h1 { font-size: 2.3em; }
+    .card a:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
     }
 
     /* Footer Styles */
@@ -113,6 +133,17 @@
       position: relative;
       bottom: 0;
       width: 100%;
+    }
+
+    footer .social-links a {
+      color: #ff9f9f;
+      text-decoration: none;
+      margin: 0 15px;
+      transition: color 0.3s ease;
+    }
+
+    footer .social-links a:hover {
+      color: #ff6b6b;
     }
 
   </style>
@@ -127,15 +158,7 @@
 <header>
   <h1>DigitalVerse</h1>
   <p><b>Portfolio by Abdullah</b></p>
-  <div class="button-container">
-    <a href="projects.html">See My Projects</a>
-  </div>
-
-  <!-- Social Links Section -->
-  <div class="social-links">
-    <a href="https://www.instagram.com/yourusername" target="_blank">Instagram</a>
-    <a href="https://www.linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
-  </div>
+  
 </header>
 
 <!-- Flex Container for Cards Section -->
@@ -155,9 +178,14 @@
   </div>
 </div>
 
-<!-- Footer -->
+<!-- Footer with Social Links and Descriptions -->
 <footer>
   <p>&copy; 2025 Abdullah. All Rights Reserved.</p>
+  <div class="social-links">
+    <a href="https://www.instagram.com/yourusername" target="_blank">Instagram</a>
+    <a href="https://www.linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+  </div>
+  <p>Follow me on Instagram and LinkedIn to see more updates and connect with me professionally.</p>
 </footer>
 
 </body>
