Refactor card layout and styles in index.html

--- a/index.html
+++ b/index.html
@@ -85,26 +85,40 @@
     /* Card Styles */
     .container {
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
       gap: 20px;
       margin: 50px auto;
+      flex-wrap: wrap; /* Allow wrapping for smaller screens */
     }
 
     .card {
-      width: 300px;
+      width: 48%; /* Make the cards nearly full-width */
       height: 400px;
       background-color: #fff;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
       border-radius: 15px;
       overflow: hidden;
       position: relative;
-      background-size: cover;
-      background-position: center;
-      color: white;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+
+    .card img {
+      width: 50%; /* Image takes up half of the card */
+      height: 100%;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+
+    .card-content {
+      width: 48%; /* Content area (button) takes the other half */
       display: flex;
       flex-direction: column;
-      justify-content: flex-end;
+      justify-content: center;
       text-align: center;
     }
 
@@ -116,7 +130,7 @@
       display: inline-block;
       font-weight: bold;
       text-decoration: none;
-      margin-bottom: 20px;
+      margin-top: 20px;
     }
 
     .card a:hover {
@@ -158,23 +172,31 @@
 <header>
   <h1>DigitalVerse</h1>
   <p><b>Portfolio by Abdullah</b></p>
-  
+  <div class="button-container">
+    <a href="projects.html">See My Projects</a>
+  </div>
 </header>
 
 <!-- Flex Container for Cards Section -->
 <div class="container">
-  <!-- Card 1: Google Drive Section -->
-  <div class="card" style="background-image: url('https://example.com/path-to-your-image.jpg');">
-    <h3>Designs, Photos & Videos</h3>
-    <p>Explore my creative collection:</p>
-    <a href="https://drive.google.com/drive/folders/1JeHOoXHlQUOfeBhwnxhSdlw8_lnjy0kl" target="_blank">Open Google Drive</a>
+  <!-- Card 1: Open Google Drive (Extended Left) -->
+  <div class="card">
+    <img src="https://example.com/path-to-your-image.jpg" alt="Google Drive">
+    <div class="card-content">
+      <h3>Designs, Photos & Videos</h3>
+      <p>Explore my creative collection:</p>
+      <a href="https://drive.google.com/drive/folders/1JeHOoXHlQUOfeBhwnxhSdlw8_lnjy0kl" target="_blank">Open Google Drive</a>
+    </div>
   </div>
 
-  <!-- Card 2: Projects Section -->
-  <div class="card" style="background-image: url('https://example.com/path-to-your-image.jpg');">
-    <h3>My Projects</h3>
-    <p>Check out my latest work.</p>
-    <a href="projects.html">See My Projects</a>
+  <!-- Card 2: See My Projects (Extended Right) -->
+  <div class="card">
+    <div class="card-content">
+      <h3>My Projects</h3>
+      <p>Check out my latest work.</p>
+      <a href="projects.html">See My Projects</a>
+    </div>
+    <img src="https://example.com/path-to-your-image.jpg" alt="Projects">
   </div>
 </div>
 
