--- a/index.html
+++ b/index.html
@@ -6,187 +6,190 @@
   <title>Abzy Cyber Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Poppins', Arial, sans-serif;
-      color: #333;
-      overflow-x: hidden;
-      position: relative;
-      transition: all 0.3s ease;
-    }
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', Arial, sans-serif;
+    color: #333;
+    overflow-x: hidden;
+    position: relative;
+    transition: all 0.3s ease;
+  }
 
-    .video-background {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: -1; /* Ensure video is behind everything */
-    }
+  .video-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1; /* Ensure video is behind everything */
+  }
 
-    /* --- Header Styles --- */
-    header {
-      text-align: center;
-      padding: 100px 20px 40px;
-      position: relative;
-      z-index: 2; /* Ensure header content is above video and other elements */
-    }
+  /* --- Header Styles --- */
+  header {
+    text-align: center;
+    padding: 100px 20px 40px;
+    position: relative;
+    z-index: 2; /* Ensure header content is above video and other elements */
+  }
 
-    header h1 {
-      margin: 0;
-      font-size: 3.5em;
-      color: #ff9f9f;
-      text-shadow: 0 0 5px #ff9f9f, 0 0 15px #ff9f9f;
-      animation: flicker 1.5s infinite alternate;
-    }
+  header h1 {
+    margin: 0;
+    font-size: 3.5em;
+    color: #ff9f9f;
+    text-shadow: 0 0 5px #ff9f9f, 0 0 15px #ff9f9f;
+    animation: flicker 1.5s infinite alternate;
+  }
 
-    @keyframes flicker {
-      0% { opacity: 1; }
-      10% { opacity: 0.5; }
-      20% { opacity: 1; }
-      30% { opacity: 0.7; }
-      40% { opacity: 1; }
-      50% { opacity: 0.3; }
-      60% { opacity: 1; }
-      70% { opacity: 0.8; }
-      80% { opacity: 1; }
-      90% { opacity: 0.6; }
-      100% { opacity: 1; }
-    }
+  @keyframes flicker {
+    0% { opacity: 1; }
+    10% { opacity: 0.5; }
+    20% { opacity: 1; }
+    30% { opacity: 0.7; }
+    40% { opacity: 1; }
+    50% { opacity: 0.3; }
+    60% { opacity: 1; }
+    70% { opacity: 0.8; }
+    80% { opacity: 1; }
+    90% { opacity: 0.6; }
+    100% { opacity: 1; }
+  }
 
-    header p {
-      margin-top: 10px;
-      font-size: 1.2em;
-      color: #666;
-    }
+  header p {
+    margin-top: 10px;
+    font-size: 1.2em;
+    color: #666;
+  }
 
-    .button-container {
-      margin-top: 30px;
-    }
+  .button-container {
+    margin-top: 30px;
+  }
 
-    .button-container a {
-      color: #ffffff;
-      background: #ff9f9f;
-      padding: 12px 25px;
-      border-radius: 10px;
-      display: inline-block;
-      font-weight: bold;
-      transition: all 0.3s ease;
-      text-decoration: none;
-    }
+  .button-container a {
+    color: #ffffff;
+    background: #ff9f9f;
+    padding: 12px 25px;
+    border-radius: 10px;
+    display: inline-block;
+    font-weight: bold;
+    transition: all 0.3s ease;
+    text-decoration: none;
+    border: none; /* Remove border */
+  }
 
-    .button-container a:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
-    }
+  .button-container a:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
+  }
 
-    /* Transparent Nav Buttons */
-    .nav-buttons {
-      margin-top: 20px;
-    }
+  /* Transparent Nav Buttons */
+  .nav-buttons {
+    margin-top: 20px;
+  }
 
-    .nav-buttons a {
-      color: #ff9f9f; /* Light pink text color */
-      background: transparent; /* Transparent background */
-      border: 2px solid #ff9f9f; /* Pink border */
-      padding: 10px 20px;
-      border-radius: 10px;
-      margin: 5px;
-      display: inline-block;
-      font-weight: bold;
-      transition: all 0.3s ease;
-      text-decoration: none;
-    }
+  .nav-buttons a {
+    color: #ff9f9f; /* Light pink text color */
+    background: transparent; /* Transparent background */
+    border: 2px solid #ff9f9f; /* Pink border */
+    padding: 10px 20px;
+    border-radius: 10px;
+    margin: 5px;
+    display: inline-block;
+    font-weight: bold;
+    transition: all 0.3s ease;
+    text-decoration: none;
+  }
 
-    .nav-buttons a:hover {
-      color: #fff; /* White text on hover */
-      background: #ff9f9f; /* Pink background on hover */
-      border: 2px solid #ff9f9f; /* Pink border on hover */
-      transform: scale(1.05);
-      box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
-    }
+  .nav-buttons a:hover {
+    color: #fff; /* White text on hover */
+    background: #ff9f9f; /* Pink background on hover */
+    border: 2px solid #ff9f9f; /* Pink border on hover */
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
+  }
 
-    /* Card Styles */
-    .container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 20px;
-      margin: 50px auto;
-      flex-wrap: wrap; /* Allow wrapping for smaller screens */
-    }
+  /* Card Styles */
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    margin: 50px auto;
+    flex-wrap: wrap; /* Allow wrapping for smaller screens */
+  }
 
-    .card {
-      width: 48%; /* Make the cards nearly full-width */
-      height: 400px;
-      background-color: #fff;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-      border-radius: 15px;
-      overflow: hidden;
-      position: relative;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px;
-      box-sizing: border-box;
-    }
+  .card {
+    width: 48%; /* Make the cards nearly full-width */
+    height: 400px;
+    background-color: #f0f0f0; /* Change card color to grey */
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+  }
 
-    .card img {
-      width: 50%; /* Image takes up half of the card */
-      height: 100%;
-      object-fit: cover;
-      border-radius: 10px;
-    }
+  .card img {
+    width: 50%; /* Image takes up half of the card */
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+  }
 
-    .card-content {
-      width: 48%; /* Content area (button) takes the other half */
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      text-align: center;
-    }
+  .card-content {
+    width: 48%; /* Content area (button) takes the other half */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
 
-    .card a {
-      color: #fff;
-      background: #ff9f9f;
-      padding: 12px 25px;
-      border-radius: 10px;
-      display: inline-block;
-      font-weight: bold;
-      text-decoration: none;
-      margin-top: 20px;
-    }
+  .card a {
+    color: #fff;
+    background: #ff9f9f;
+    padding: 12px 25px;
+    border-radius: 10px;
+    display: inline-block;
+    font-weight: bold;
+    text-decoration: none;
+    margin-top: 20px;
+    border: none; /* Remove border */
+  }
 
-    .card a:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
-    }
+  .card a:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
+  }
 
-    /* Footer Styles */
-    footer {
-      background: #333;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-      position: relative;
-      bottom: 0;
-      width: 100%;
-    }
+  /* Footer Styles */
+  footer {
+    background: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+  }
 
-    footer .social-links a {
-      color: #ff9f9f;
-      text-decoration: none;
-      margin: 0 15px;
-      transition: color 0.3s ease;
-    }
+  footer .social-links a {
+    color: #ff9f9f;
+    text-decoration: none;
+    margin: 0 15px;
+    transition: color 0.3s ease;
+  }
 
-    footer .social-links a:hover {
-      color: #ff6b6b;
-    }
+  footer .social-links a:hover {
+    color: #ff6b6b;
+  }
 
-  </style>
+</style>
+
 </head>
 <body>
 
@@ -198,9 +201,6 @@
 <header>
   <h1>DigitalVerse</h1>
   <p><b>Portfolio by Abdullah</b></p>
-  <div class="button-container">
-    <a href="projects.html">See My Projects</a>
-  </div>
   <!-- New navigation buttons -->
   <div class="nav-buttons">
     <a href="index.html">Home</a>
