Update project image source in index.html

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <p>Check out my latest work.</p>
       <a href="projects.html">See My Projects</a>
     </div>
-    <img src="https://example.com/path-to-your-image.jpg" alt="Projects">
+    <img src="https://cdn.prod.website-files.com/606a802fcaa89bc357508cad/61701b4e166c837543d8f0ce_2_How%20To%20a%20Create%20Personal%20Portfolio%20Website.png" alt="Projects">
   </div>
 </div>
 
