--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   .nav-buttons a {
     color: #ff9f9f; /* Light pink text color */
     background: transparent; /* Transparent background */
-    border: 2px solid #ff9f9f; /* Pink border */
+    border: none; /* Pink border */
     padding: 10px 20px;
     border-radius: 10px;
     margin: 5px;
@@ -104,7 +104,7 @@
   .nav-buttons a:hover {
     color: #fff; /* White text on hover */
     background: #ff9f9f; /* Pink background on hover */
-    border: 2px solid #ff9f9f; /* Pink border on hover */
+    border: none; /* Pink border on hover */
     transform: scale(1.05);
     box-shadow: 0 0 20px rgba(255, 159, 159, 0.5);
   }
