--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 <div class="container">
   <!-- Card 1: Open Google Drive (Extended Left) -->
   <div class="card">
-    <img src="https://img.freepik.com/free-vector/camera-banners-set_1284-14002.jpg" alt="Google Drive">
+    <img src="https://i.pinimg.com/1200x/4c/f3/78/4cf37890baea59fec72e6ad52e44d927.jpg" alt="Google Drive">
     <div class="card-content">
       <h3>Designs, Photos & Videos</h3>
       <p>Explore my creative collection:</p>
