Change card background color to transparent

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   .card {
     width: 48%; /* Make the cards nearly full-width */
     height: 400px;
-    background-color: #d3d3d3; /* Change card color to grey */
+    background-color: rgba(0, 0, 0, 0); /* Change card color to grey */
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
     overflow: hidden;
