--- a/index.html
+++ b/index.html
@@ -193,10 +193,9 @@
 </head>
 <body>
 
-<video autoplay muted loop class="video-background">
-  <source src="https://motionbgs.com/media/5976/cyberpunk-palm-trees.960x540.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+<!-- Use an image instead of video for the background -->
+<img src="https://img.freepik.com/free-photo/liquid-marbling-paint-texture-background-fluid-painting-abstract-texture-intensive-color-mix-wallpaper_1258-85312.jpg" alt="Black wallpaper" class="image-background">
+
 
 <header>
   <h1>DigitalVerse</h1>
