--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     overflow-x: hidden;
     position: relative;
     transition: all 0.3s ease;
+    background-color: #000000;
   }
 
   .video-background {
@@ -192,10 +193,6 @@
 
 </head>
 <body>
-
-<!-- Use an image instead of video for the background -->
-<img src="https://img.freepik.com/free-photo/liquid-marbling-paint-texture-background-fluid-painting-abstract-texture-intensive-color-mix-wallpaper_1258-85312.jpg" alt="Black wallpaper" class="image-background">
-
 
 <header>
   <h1>DigitalVerse</h1>
