--- a/about.html
+++ b/about.html
@@ -47,7 +47,9 @@
 
 <div class="content">
   <h2>Hi, I'm Abdullah</h2>
-  <p>Welcome to my digital portfolio. I'm a passionate developer with expertise in web design, coding, and creative digital projects.</p>
+  <p>Welcome to my digital portfolio. An MCA graduate with 1-2 years of hands-on experience in web development, SEO, IT support, and SQL. With a strong foundation in both backend and frontend technologies, has contributed to developing efficient and user-friendly websites, optimizing them for search engines, and providing technical support. Skilled in SQL for effective database management, ensuring smooth and optimized web operations.
+
+In addition to technical expertise, there’s a deep passion for photography and videography. Whether capturing stunning visuals or editing videos with a creative touch, there’s a keen eye for detail. Experience in content creation is supported by a strong understanding of editing software, producing high-quality and engaging content. Always eager to learn and grow, blending technical acumen with artistic creativity to deliver impactful digital solutions and media experiences.</p>
   <p>Feel free to explore my work and get in touch!</p>
 
   <div class="button-container">
