--- a/about.html
+++ b/about.html
@@ -10,12 +10,13 @@
       font-family: 'Poppins', Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f5f5f5;
+      background: url('https://img.freepik.com/free-photo/top-view-desk-dark-concept-with-copy-space_23-2148459511.jpg') no-repeat center center fixed;
+      background-size: cover;
       color: #333;
     }
 
     header {
-      background-color: #333;
+      background-color: rgba(0, 0, 0, 0.6); /* Transparent background for header */
       color: white;
       padding: 20px 0;
       text-align: center;
@@ -24,6 +25,11 @@
     .content {
       padding: 40px;
       text-align: center;
+      background: rgba(255, 255, 255, 0.8); /* Slightly transparent background */
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      max-width: 800px;
+      margin: 0 auto;
     }
 
     .button-container a {
@@ -37,6 +43,22 @@
     .button-container a:hover {
       background: #ff6f6f;
     }
+
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 10px 0;
+    }
+
+    footer a {
+      color: #ff9f9f;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      color: #ff6f6f;
+    }
   </style>
 </head>
 <body>
@@ -47,9 +69,10 @@
 
 <div class="content">
   <h2>Hi, I'm Abdullah</h2>
-  <p>Welcome to my digital portfolio. An MCA graduate with 1-2 years of hands-on experience in web development, SEO, IT support, and SQL. With a strong foundation in both backend and frontend technologies, has contributed to developing efficient and user-friendly websites, optimizing them for search engines, and providing technical support. Skilled in SQL for effective database management, ensuring smooth and optimized web operations.
-
-In addition to technical expertise, there’s a deep passion for photography and videography. Whether capturing stunning visuals or editing videos with a creative touch, there’s a keen eye for detail. Experience in content creation is supported by a strong understanding of editing software, producing high-quality and engaging content. Always eager to learn and grow, blending technical acumen with artistic creativity to deliver impactful digital solutions and media experiences.</p>
+  <p>Welcome to my digital portfolio. An MCA graduate with 1-2 years of hands-on experience in web development, SEO, IT support, and SQL. With a strong foundation in both backend and frontend technologies, has contributed to developing efficient and user-friendly websites, optimizing them for search engines, and providing technical support. Skilled in SQL for effective database management, ensuring smooth and optimized web operations.</p>
+  
+  <p>In addition to technical expertise, there’s a deep passion for photography and videography. Whether capturing stunning visuals or editing videos with a creative touch, there’s a keen eye for detail. Experience in content creation is supported by a strong understanding of editing software, producing high-quality and engaging content. Always eager to learn and grow, blending technical acumen with artistic creativity to deliver impactful digital solutions and media experiences.</p>
+  
   <p>Feel free to explore my work and get in touch!</p>
 
   <div class="button-container">
