--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
       font-family: 'Poppins', Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: url('https://img.freepik.com/free-photo/top-view-desk-dark-concept-with-copy-space_23-2148459511.jpg') no-repeat center center fixed;
+      background: url('https://img.freepik.com/free-vector/abstract-frame-vector-ink-brush-patterned-background_53876-115154.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #333;
       display: flex;
@@ -29,11 +29,10 @@
       padding: 40px;
       text-align: center;
       background: rgba(255, 255, 255, 0.8); /* Slightly transparent background */
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       max-width: 800px;
       margin: 0 auto;
       flex-grow: 1; /* Ensure content grows to take available space */
+      /* Removed the border-radius and box-shadow to remove the "card" effect */
     }
 
     .button-container a {
